Bug 1249604 - Don't use gtk_drag_set_icon_surface on GTK versions that use X SHAPE for dnd with cairo. r=karlt

MozReview-Commit-ID: 2XxnJfvfOXl

--HG--
extra : rebase_source : d16f4fecc70be105cd2fd2177b5fee62fc53c583